--- a/style/main.css
+++ b/style/main.css
@@ -41,3 +41,192 @@ header{
 	font-size: 14px;
 	font-family: "Microsoft YaHei";
 }
+#container{
+	height: 600px;
+	position: relative;
+}
+#container img{
+	position: absolute;
+	width: 100%;
+}
+#container img:first-child{
+	display: block;
+}
+#container .btns{
+	position: absolute;
+	top: 570px;
+	left: 904px;
+}
+#container .btns span{
+	display: block;
+	width: 12px;
+	height: 12px;
+	border:1px solid #fff;
+	border-radius: 50%;
+	float: left;
+	margin-left: 20px;
+	cursor: pointer;
+}
+#container .btns .on{
+	background-color: #ff7300;
+	border:1px solid #ff7300;
+}
+.pdisplay{
+	margin-top: 58px;
+	position: relative;
+	height: 644px;
+}
+.displaytitle{
+	width: 223px;
+	margin:0 auto;
+}
+#container2 {
+	position: relative;
+	width:1000px;
+	height: 385px;
+	overflow: hidden;
+	left: 490px;
+	margin-top: 50px;
+}
+#container2 img{
+	float: left;
+}
+#container2 .displaypic1{
+	position: absolute;
+	width:4000px;
+	height: 385px;
+}
+#container2 .displaypic1 img{
+	float: left;
+}
+#container2 .displaypic1{
+	top: 48px;
+}
+.arrow{
+	position: absolute;
+	top: 270px;
+	cursor: pointer;
+}
+.pre{
+	left: 420px;
+}
+.next{
+	left:1540px;
+}
+.displayleft{
+	width: 474px;
+	height: 99px;
+	margin-top: 120px;
+	float: left;
+	margin-left: 20px;
+}
+.displayright{
+	width: 350px;
+	height: 379px;
+	float: left;
+	margin-top: -50px;
+	margin-left: 150px;
+}
+#aboutus{
+	width: 100%;
+	height: 644px;
+	background:url(../images/2bg.png);
+}
+.comWidth{
+	width: 1100px;
+	margin: 0 auto;
+	height: 644px;
+}
+.aboutus_content{
+	text-align: center;
+	padding-top: 100px;
+	color: #fff;
+}
+.showus{
+	width: 960px;
+	height: 285px;
+	margin: 60px auto 0 auto;
+	position: relative;
+}
+.showus img{
+	position: absolute;
+}
+@keyframes img1animate{
+	0%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	20%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	33%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	50%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	66%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	85%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	100%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+}
+
+@keyframes img2animate{
+	0%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	20%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	33%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	50%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	66%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	85%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	100%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+}
+@keyframes img3animate{
+	0%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	20%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	33%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	50%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	66%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	85%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	100%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+}
+.img1{
+	animation:img1animate 6s ease-in-out 1s infinite;
+}
+.img2{
+	animation:img2animate 6s ease-in-out 1s infinite;
+}
+.img3{
+	animation:img3animate 6s ease-in-out 1s infinite;
+}
