--- a/style/main.css
+++ b/style/main.css
@@ -137,6 +137,14 @@ header{
 	margin: 0 auto;
 	height: 644px;
 }
+.aboutus_title{
+	width: 224px;
+	height: 49px;
+	margin: 0 auto;
+}
+.aboutus_title img{
+	margin: 60px auto 0 auto;
+}
 .aboutus_content{
 	text-align: center;
 	padding-top: 100px;
@@ -229,4 +237,271 @@ header{
 }
 .img3{
 	animation:img3animate 6s ease-in-out 1s infinite;
+}
+.news_title{
+	width: 224px;
+	height: 49px;
+	margin: 0 auto;
+}
+.news_title img{
+	margin-top: 60px;
+}
+.news_content{
+	margin-top: 120px;
+}
+.newspic{
+	float: left;
+	height: 167px;
+	width: 269px;
+}
+.newslist{
+	float: left;
+	width: 362px;
+	margin-left: 9px;
+}
+.newslist span{
+	display: block;
+	color: #888;
+}
+.newslist h2,.newslist2 h2{
+	font-size: 16px;
+	font-family: "微软雅黑";
+	font-weight: normal;
+	margin-top:34px;
+}
+.newslist h2:hover,.info:hover{
+	color: #e4620b;
+}
+.info{
+	margin: 15px 0 20px 0;
+	display: block;
+}
+.news_left{
+	border-bottom: 1px solid #e2e2e2;
+	width: 640px;
+	height: 190px;	
+}
+.news_left2{
+	margin-top: 24px;
+	width: 640px;
+}
+.newsleftbox{
+	width: 640px;
+	height: 382px;
+	float: left;
+}
+.newsrightlist{
+	width: 454px;
+	float: left;
+}
+.news1,.news2,.news3{
+	width: 454px;
+	height: 96px;
+	margin-bottom: 40px;
+}
+.news1:hover a,.news2:hover a,.news3:hover a{
+	color: #fff;
+}
+.news1:hover,.news2:hover,.news3:hover{
+	background-color: #e4620b;
+}
+.news1:hover .num{
+	background: url(../images/n1.png) no-repeat 0 -51px;
+}
+.news2:hover .num1{
+	background: url(../images/n2.png) no-repeat 0 -51px;
+}
+.news3:hover .num2{
+	background: url(../images/n3.png) no-repeat 0 -51px;
+}
+.num{
+	margin: 20px 0 0 15px; 
+	background: url(../images/n1.png) no-repeat;
+	width: 78px;
+	height: 51px;
+	float: left;
+}
+.num1{
+	margin: 20px 0 0 15px; 
+	background: url(../images/n2.png) no-repeat;
+	width: 78px;
+	height: 51px;
+	float: left;
+}
+.num2{
+	margin: 20px 0 0 15px; 
+	background: url(../images/n3.png) no-repeat;
+	width: 78px;
+	height: 51px;
+	float: left;
+}
+.contentnews h2{
+	font-size: 16px;
+	font-family: "微软雅黑";
+	font-weight: normal;
+}
+.contentnews{
+	float: left;
+	width: 337px;
+	margin:15px 0 0 14px;
+	padding-right: 10px;
+}
+footer{
+	background: #151314;
+	height: 418px;
+}
+.contacttitle img{
+	margin-top: 60px;
+}
+.contacttitle{
+	width: 224px;
+	margin: 0 auto;
+}
+.contactway1{
+	background:url(../images/lx_1.png) no-repeat;
+	width: 260px;
+	height: 69px;
+	float: left;
+	margin: 50px 105px 0 50px;
+}
+.contactway1:hover{
+	background:url(../images/lx_1.png) no-repeat 0 -69px;
+}
+.contactway2{
+	background:url(../images/lx_2.png) no-repeat;
+	width: 155px;
+	height: 69px;
+	float: left;
+	margin: 50px 125px 0 50px;
+}
+.contactway2:hover{
+	background:url(../images/lx_2.png) no-repeat 0 -70px;
+}
+.contactway3{
+	background:url(../images/lx_3.png) no-repeat;
+	width: 182px;
+	height: 69px;
+	float: left;
+	margin: 50px 105px 0 50px;
+}
+.contactway3:hover{
+	background:url(../images/lx_3.png) no-repeat 0 -70px;
+}
+.contactus{
+	border-bottom: 1px solid #888;
+	height: 318px;
+}
+.copyright{
+	color: #888;
+	text-align: center;
+	margin-top: 45px;
+}
+.copyright a{
+	color: #fff;
+}
+#slidebar{
+	position: fixed;
+	right: -76px;
+	top:300px;
+}
+#slidebar ul{
+	height: 167px;
+	width: 126px;
+}
+#slidebar ul li{
+	height: 55px;
+	width: 126px;
+	text-indent: 50px;
+	line-height: 55px;
+	position: relative;
+}
+#slidebar ul li a{
+	color: #fff;
+}
+.qqserve{
+	background:url(../images/side_icon01.png) #333 no-repeat;
+	border-bottom: 1px solid #444;
+}
+.qqserve:hover{
+	background:url(../images/side_icon01.png) #ae1c1c no-repeat;
+}
+.weibo{
+	background:url(../images/side_icon02.png) #333 no-repeat;
+}
+.weibo:hover{
+	background:url(../images/side_icon02.png) #ae1c1c no-repeat;
+}
+.scrolltoTop{
+	width: 50px;
+	height: 50px;
+	position: fixed;
+	right: 70px;
+	bottom: 80px;
+	cursor: pointer;
+}
+/*about 页面*/
+
+#bgbanner img{
+	width: 100%;
+}
+#about_us{
+	margin-top: 60px;
+}
+.abouttitle{
+	width: 1100px;
+	height: 50px;
+	line-height: 50px;
+	border-bottom: 1px solid #ccc;
+}
+.abouttitle h3{
+	font: 34px "微软雅黑";
+	color: #666;
+	display: inline;
+}
+.abouttitle span{
+	color: #888;
+	margin: 5px;
+}
+.aboutcontent{
+	color: #888;
+	margin: 20px 0 20px 0;
+	animation:fadein 1s;
+}
+.aboutpic{
+	animation:picfadein 1s;
+}
+.aboutpic img{
+	margin-right: 10px;
+}
+#copyright a{
+	color: #fff;
+	font:12px "微软雅黑";
+}
+#copyright{
+	color: #888;
+	text-align: center;
+	padding-top: 45px;
+	background-color: #151314;
+	height: 55px;
+	font:12px "微软雅黑";
+}
+@keyframes fadein{
+	0%{
+		opacity: 0;
+		transform:translate3d(300px,0,0);
+	}
+	100%{
+		opacity: 1;
+		transform:translate3d(0,0,0);
+	}
+}
+@keyframes picfadein{
+	0%{
+		opacity: 0;
+		transform:translate3d(-300px,0,0);
+	}
+	100%{
+		opacity: 1;
+		transform:translate3d(0,0,0);
+	}
 }
