--- a/style/main.css
+++ b/style/main.css
@@ -63,6 +63,8 @@ header{
 	height: 12px;
 	border:1px solid #fff;
 	border-radius: 50%;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
 	float: left;
 	margin-left: 20px;
 	cursor: pointer;
@@ -182,8 +184,100 @@ header{
 		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
 	}
 }
+@-moz-keyframes img1animate{
+	0%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	20%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	33%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	50%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	66%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	85%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	100%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+}
+@-webkit-keyframes img1animate{
+	0%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	20%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	33%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	50%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	66%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	85%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	100%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+}
 
 @keyframes img2animate{
+	0%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	20%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	33%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	50%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	66%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	85%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	100%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+}
+@-moz-keyframes img2animate{
+	0%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	20%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	33%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	50%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	66%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	85%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	100%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+}
+@-webkit-keyframes img2animate{
 	0%{
 		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
 	}
@@ -229,14 +323,66 @@ header{
 		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
 	}
 }
+@-moz-keyframes img3animate{
+	0%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	20%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	33%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	50%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	66%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	85%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	100%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+}
+@-webkit-keyframes img3animate{
+	0%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	20%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+	33%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	50%{
+		left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;
+	}
+	66%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	85%{
+		left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;
+	}
+	100%{
+		left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;
+	}
+}
 .img1{
 	animation:img1animate 6s ease-in-out 1s infinite;
+	-moz-animation:img1animate 6s ease-in-out 1s infinite;
+	-webkit-animation:img1animate 6s ease-in-out 1s infinite;
 }
 .img2{
 	animation:img2animate 6s ease-in-out 1s infinite;
+	-moz-animation:img2animate 6s ease-in-out 1s infinite;
+	-webkit-animation:img2animate 6s ease-in-out 1s infinite;
 }
 .img3{
 	animation:img3animate 6s ease-in-out 1s infinite;
+	-moz-animation:img3animate 6s ease-in-out 1s infinite;
+	-webkit-animation:img3animate 6s ease-in-out 1s infinite;
 }
 .news_title{
 	width: 224px;
@@ -346,9 +492,10 @@ header{
 	margin:15px 0 0 14px;
 	padding-right: 10px;
 }
-footer{
+#footer{
 	background: #151314;
 	height: 418px;
+	width: 100%;
 }
 .contacttitle img{
 	margin-top: 60px;
