--- a/style/main.css
+++ b/style/main.css
@@ -48,14 +48,15 @@ header{
 #container img{
 	position: absolute;
 	width: 100%;
+	height: 600px;
 }
 #container img:first-child{
 	display: block;
 }
 #container .btns{
 	position: absolute;
-	top: 570px;
-	left: 904px;
+	top: 95%;
+	left: 47%;
 }
 #container .btns span{
 	display: block;
@@ -87,8 +88,7 @@ header{
 	width:1000px;
 	height: 385px;
 	overflow: hidden;
-	left: 490px;
-	margin-top: 50px;
+	margin: 50px auto;
 }
 #container2 img{
 	float: left;
@@ -104,16 +104,21 @@ header{
 #container2 .displaypic1{
 	top: 48px;
 }
+.pdisplay>.comWidth{
+	position: relative;
+	height: 385px;
+}
 .arrow{
 	position: absolute;
-	top: 270px;
+	top: 45%;
 	cursor: pointer;
+	z-index: 99;
 }
 .pre{
-	left: 420px;
+	
 }
 .next{
-	left:1540px;
+	right: 0;
 }
 .displayleft{
 	width: 474px;
